Improved .tmux.conf and bashrc-additions.sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,9 @@ bind -r M-h resize-pane -L 5
 bind -r M-j resize-pane -D 5
 bind -r M-k resize-pane -U 5
 bind -r M-l resize-pane -R 5
+
+# use the current path of the active pane when creating new panes/windows.
+# A window doesn't have a path, it always contains at least 1 pane, which has a path.
+bind-key -T prefix c  new-window      -c "#{pane_current_path}"
+bind-key -T prefix \% split-window -h -c "#{pane_current_path}"
+bind-key -T prefix \" split-window -v -c "#{pane_current_path}"
