.tmux.conf: Changed pane cwd stuff to actually work. Also added .gitignore

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,6 @@ bind -r M-l resize-pane -R 5
 
 # use the current path of the active pane when creating new panes/windows.
 # A window doesn't have a path, it always contains at least 1 pane, which has a path.
-bind-key -T prefix c  new-window      -c "#{pane_current_path}"
-bind-key -T prefix \% split-window -h -c "#{pane_current_path}"
-bind-key -T prefix \" split-window -v -c "#{pane_current_path}"
+bind-key -T prefix c   new-window      -c "#{pane_current_path}"
+bind-key -T prefix %   split-window -h -c "#{pane_current_path}"
+bind-key -T prefix '"' split-window -v -c "#{pane_current_path}"
